@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -211,13 +211,13 @@ public class ApplicationValidator extends EjbBundleValidator
         MultipartConfig multipartConfig = descriptor.getMultipartConfig();
         if (multipartConfig != null) {
             if (multipartConfig.getMaxFileSize() == null) {
-                multipartConfig.setMaxFileSize(new Long(-1));
+                multipartConfig.setMaxFileSize(Long.valueOf(-1));
             }
             if (multipartConfig.getMaxRequestSize() == null) {
-                multipartConfig.setMaxRequestSize(new Long(-1));
+                multipartConfig.setMaxRequestSize(Long.valueOf(-1));
             }
             if (multipartConfig.getFileSizeThreshold() == null) {
-                multipartConfig.setFileSizeThreshold(new Integer(0));
+                multipartConfig.setFileSizeThreshold(Integer.valueOf(0));
             }
         }
 
