@@ -245,7 +245,16 @@ public class WebdavServlet
      /**
      * MD5 message digest provider.
      */
-    protected static MessageDigest md5Helper;
+    protected static final MessageDigest md5Helper;
+
+    static {
+        // Load the MD5 helper used to calculate signatures.
+        try {
+            md5Helper = MessageDigest.getInstance("MD5");
+        } catch (NoSuchAlgorithmException e) {
+            throw new IllegalStateException("No MD5");
+        }
+    }
 
 
     /**
@@ -307,13 +316,6 @@ public class WebdavServlet
 
         if (getServletConfig().getInitParameter("secret") != null)
             secret = getServletConfig().getInitParameter("secret");
-
-        // Load the MD5 helper used to calculate signatures.
-        try {
-            md5Helper = MessageDigest.getInstance("MD5");
-        } catch (NoSuchAlgorithmException e) {
-            throw new UnavailableException("No MD5");
-        }
 
     }
 
@@ -530,6 +532,8 @@ public class WebdavServlet
                             type = FIND_ALL_PROP;
                         }
                         break;
+                    default:
+                        break;
                     }
                 }
             } catch (SAXException e) {
@@ -559,6 +563,8 @@ public class WebdavServlet
                     }
                     // href is a live property which is handled differently
                     properties.addElement(propertyName);
+                    break;
+                default:
                     break;
                 }
             }
@@ -1016,6 +1022,8 @@ public class WebdavServlet
                         lockOwnerNode = currentNode;
                     }
                     break;
+                default:
+                    break;
                 }
             }
 
@@ -1035,6 +1043,8 @@ public class WebdavServlet
                         } else {
                             lock.scope = tempScope;
                         }
+                        break;
+                    default:
                         break;
                     }
                 }
@@ -1066,6 +1076,8 @@ public class WebdavServlet
                             lock.type = tempType;
                         }
                         break;
+                    default:
+                        break;
                     }
                 }
 
@@ -1095,6 +1107,8 @@ public class WebdavServlet
                         domWriter.print(currentNode);
                         lock.owner += strWriter.toString();
                         break;
+                    default:
+                        break;
                     }
                 }
 
@@ -1104,7 +1118,7 @@ public class WebdavServlet
                 }
 
             } else {
-                lock.owner = new String();
+                lock.owner = "";
             }
 
         }
@@ -1131,8 +1145,12 @@ public class WebdavServlet
                 + lock.depth + "-" + lock.owner + "-" + lock.tokens + "-"
                 + lock.expiresAt + "-" + System.currentTimeMillis() + "-"
                 + secret;
-            String lockToken =
-                new String(md5Encoder.encode(md5Helper.digest(lockTokenStr.getBytes())));
+            
+            byte[] digestBytes = null;
+            synchronized(md5Helper) {
+                digestBytes = md5Helper.digest(lockTokenStr.getBytes());
+            }
+            String lockToken = new String(md5Encoder.encode(digestBytes));
 
             if ( exists && object instanceof DirContext &&
                 lock.depth == INFINITY) {
@@ -1748,7 +1766,7 @@ public class WebdavServlet
                 resources.createSubcontext(dest);
             } catch (NamingException e) {
                 errorList.put
-                    (dest, new Integer(WebdavStatus.SC_CONFLICT));
+                    (dest, Integer.valueOf(WebdavStatus.SC_CONFLICT));
                 return false;
             }
 
@@ -1768,7 +1786,7 @@ public class WebdavServlet
                 }
             } catch (NamingException e) {
                 errorList.put
-                    (dest, new Integer(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
+                    (dest, Integer.valueOf(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                 return false;
             }
 
@@ -1780,13 +1798,13 @@ public class WebdavServlet
                 } catch (NamingException e) {
                     errorList.put
                         (source,
-                         new Integer(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
+                         Integer.valueOf(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                     return false;
                 }
             } else {
                 errorList.put
                     (source,
-                     new Integer(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
+                     Integer.valueOf(WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                 return false;
             }
 
@@ -1878,7 +1896,7 @@ public class WebdavServlet
             try {
                 resources.unbind(path);
             } catch (NamingException e) {
-                errorList.put(path, new Integer
+                errorList.put(path, Integer.valueOf
                     (WebdavStatus.SC_INTERNAL_SERVER_ERROR));
             }
 
@@ -1915,7 +1933,7 @@ public class WebdavServlet
 
         if (path.toUpperCase(Locale.ENGLISH).startsWith("/WEB-INF") ||
             path.toUpperCase(Locale.ENGLISH).startsWith("/META-INF")) {
-            errorList.put(path, new Integer(WebdavStatus.SC_FORBIDDEN));
+            errorList.put(path, Integer.valueOf(WebdavStatus.SC_FORBIDDEN));
             return;
         }
 
@@ -1931,7 +1949,7 @@ public class WebdavServlet
         try {
             enumeration = resources.list(path);
         } catch (NamingException e) {
-            errorList.put(path, new Integer
+            errorList.put(path, Integer.valueOf
                 (WebdavStatus.SC_INTERNAL_SERVER_ERROR));
             return;
         }
@@ -1945,7 +1963,7 @@ public class WebdavServlet
 
             if (isLocked(childName, ifHeader + lockTokenHeader)) {
 
-                errorList.put(childName, new Integer(WebdavStatus.SC_LOCKED));
+                errorList.put(childName, Integer.valueOf(WebdavStatus.SC_LOCKED));
 
             } else {
 
@@ -1962,13 +1980,13 @@ public class WebdavServlet
                             // If it's not a collection, then it's an unknown
                             // error
                             errorList.put
-                                (childName, new Integer
+                                (childName, Integer.valueOf
                                     (WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                         }
                     }
                 } catch (NamingException e) {
                     errorList.put
-                        (childName, new Integer
+                        (childName, Integer.valueOf
                             (WebdavStatus.SC_INTERNAL_SERVER_ERROR));
                 }
             }
@@ -2313,6 +2331,8 @@ public class WebdavServlet
 
             break;
 
+        default: // not possible
+            break;
         }
 
         generatedXML.writeElement(null, "response", XMLWriter.CLOSING);
@@ -2560,6 +2580,8 @@ public class WebdavServlet
 
             break;
 
+        default: // not possible
+            break;
         }
 
         generatedXML.writeElement(null, "response", XMLWriter.CLOSING);
@@ -2683,7 +2705,7 @@ public class WebdavServlet
     /**
      * Holds a lock information.
      */
-    private class LockInfo {
+    private static class LockInfo {
 
 
         // -------------------------------------------------------- Constructor
@@ -2718,17 +2740,18 @@ public class WebdavServlet
          */
         public String toString() {
 
-            String result =  "Type:" + type + "\n";
-            result += "Scope:" + scope + "\n";
-            result += "Depth:" + depth + "\n";
-            result += "Owner:" + owner + "\n";
-            result += "Expiration:"
-                + FastHttpDateFormat.formatDate(expiresAt, null) + "\n";
+            StringBuilder result =  new StringBuilder("Type:");
+            result.append(type).append("\n");
+            result.append("Scope:").append(scope).append("\n");
+            result.append("Depth:").append(depth).append("\n");
+            result.append("Owner:").append(owner).append("\n");
+            result.append("Expiration:").append(
+                FastHttpDateFormat.formatDate(expiresAt, null)).append("\n");
             Enumeration<String> tokensList = tokens.elements();
             while (tokensList.hasMoreElements()) {
-                result += "Token:" + tokensList.nextElement() + "\n";
+                result.append("Token:").append(tokensList.nextElement()).append("\n");
             }
-            return result;
+            return result.toString();
 
         }
 
@@ -2808,7 +2831,7 @@ public class WebdavServlet
      * {@link DocumentBuilderFactory#setExpandEntityReferences(boolean)}. External
      * references are filtered out for security reasons. See CVE-2007-5461.
      */
-    private class WebdavResolver implements EntityResolver {
+    private static class WebdavResolver implements EntityResolver {
         private ServletContext context;
         
         public WebdavResolver(ServletContext theContext) {
@@ -3117,7 +3140,7 @@ class WebdavStatus {
      *                  HTTP status code (e.g., "OK").
      */
     public static String getStatusText(int nHttpStatusCode) {
-        Integer intKey = new Integer(nHttpStatusCode);
+        Integer intKey = Integer.valueOf(nHttpStatusCode);
 
         if (!mapStatusCodes.containsKey(intKey)) {
             return "";
@@ -3138,7 +3161,7 @@ class WebdavStatus {
      * @param   strVal  [IN] HTTP status text
      */
     private static void addStatusCodeMap(int nKey, String strVal) {
-        mapStatusCodes.put(new Integer(nKey), strVal);
+        mapStatusCodes.put(Integer.valueOf(nKey), strVal);
     }
 
 }
