@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -167,7 +167,7 @@ public class GrizzlyConfig implements MonitoringLevelListener{
             invokeGrizzly(methodToInvoke);
         } catch (Exception ex) {
             String msg = rb.getString("selectorThread.initMonitoringException");
-            msg = MessageFormat.format(msg, new Integer(port));
+            msg = MessageFormat.format(msg, Integer.valueOf(port));
             logger.log(Level.WARNING, msg, ex);
         }
     } 
