@@ -878,11 +878,11 @@ public class ResourceAttributes implements Attributes {
             } else if (attrID.equals(CONTENT_LENGTH)) {
                 long contentLength = getContentLength();
                 if (contentLength < 0) return null;
-                return new BasicAttribute(CONTENT_LENGTH, new Long(contentLength));
+                return new BasicAttribute(CONTENT_LENGTH, Long.valueOf(contentLength));
             } else if (attrID.equals(ALTERNATE_CONTENT_LENGTH)) {
                 long contentLength = getContentLength();
                 if (contentLength < 0) return null;
-                return new BasicAttribute(ALTERNATE_CONTENT_LENGTH, new Long(contentLength));
+                return new BasicAttribute(ALTERNATE_CONTENT_LENGTH, Long.valueOf(contentLength));
             } else if (attrID.equals(ETAG)) {
                 String etag = getETag();
                 if (etag == null) return null;
@@ -970,7 +970,7 @@ public class ResourceAttributes implements Attributes {
             }
             long contentLength = getContentLength();
             if (contentLength >= 0) {
-                Long contentLengthLong = new Long(contentLength);
+                Long contentLengthLong = Long.valueOf(contentLength);
                 attributes.addElement(new BasicAttribute(CONTENT_LENGTH, contentLengthLong));
                 attributes.addElement(new BasicAttribute(ALTERNATE_CONTENT_LENGTH, contentLengthLong));
             }
